version 1.8.8, in progress
- Enable full-text search of "online" help files
- "mread": search the gretl working directory if the
  file is not found at first
- ODBC import: enable extraction of multiple data series
  per SQL query
- Export of data to R, interactively: add a message
  confirming that the export worked
- Fix bug: errors in Exponential Moving Average in GUI
- Fix bug: non-ASCII characters not handled in function
  package upload to server
- Fix bug: double normal cdf did not handle correctly some 
  corner cases
- Fix bug 2944000

01/24/2010 version 1.8.7
- GUI enhancement: add apparatus to help keep track of
  gretl windows
- GUI menus: clean-up and consolidation
- New command: "qqplot" (Quantile-Quantile plots)
- Normal random samples: implement the Ziggurat method
- "dataset" command: document the "clear" keyword
- "rmplot" command: save $test and $pvalue
- "restrict" with --bootstrap option: record $test and
  $pvalue
- "corrgm" and "xcorrgm": allow the lag order to be
  given as a named scalar variable
- VECMs: add $ec accessor
- VARs: remove $vcv accessor
- VARs and VECMs: enable accessors $df, $ncoeff and $xtxinv
- BFGSmax function: add facility for supplying analytical
  derivatives
- Eviews data importer: handle more cases of .wf1 files
- BFGS: make the degree of verbosity tunable via "set
  bfgs_verbskip"
- Fix bug: crash on error in user_matrix_ols()
- Fix bug: "append" for data should work in more cases
- Fix bug: saving a model when there is already a saved
  model of the same name (in the GUI) caused a crash
- Fix bug: setting of sub-sample information on models
  estimated with a loop construct
- Fix bug: the GUI option for reporting standardized
  residuals for GARCH models got broken
- Fix bug: handling of on-the-fly matrices in "printf"
- Fix bugs: miscellaneous small GUI bugs
- Fix bugs 2918790, 2918783, 2918775, 2917053

11/25/2008 version 1.8.6
- Fix bug: the "print" command for series fails after