@@ -50,7 +50,6 @@ seek_inet_addr="no"
 have_tramo="yes"
 have_x12a="yes"
 have_audio="no"
-have_ox="no"
 try_sourceview="yes"
 have_sourceview="no"
 bundled_sourceview="yes"
@@ -230,15 +229,6 @@ then
   try_libR=no
 fi,
 try_libR=yes)
-
-AC_ARG_WITH(ox,
-[  --with-ox              include Ox support [[default=no]]],
-if test "$withval" = "yes"
-then
-  have_ox=yes
-  AC_DEFINE(USE_OX)
-fi,
-have_ox=no)
 
 AC_ARG_WITH(audio,
 [  --with-audio           include audio graph support (experimental)],
@@ -777,7 +767,6 @@ Configuration:
   X-12-ARIMA support:                     ${have_x12a}
   TRAMO/SEATS support:                    ${have_tramo}
   libR support:                           ${have_libR}
-  Ox support:                             ${have_ox}
   Experimental audio support:             ${have_audio}
   Experimental ODBC support:              ${have_odbc}
   LAPACK libraries:
