@@ -167,10 +167,8 @@ RCVAR rc_vars[] = {
       BOOLSET, 0, TAB_MAIN, NULL },
     { "session_prompt", N_("Prompt to save session"), NULL, &session_prompt, 
       BOOLSET, 0, TAB_MAIN, NULL },
-#ifdef USE_OX
     { "oxsupport", N_("Enable Ox support"), NULL, &ox_support, 
       BOOLSET | RESTART, 0, TAB_MAIN, NULL },
-#endif
     { "usecwd", N_("Set working directory from shell"), NULL, &usecwd, 
       INVISET | BOOLSET | RESTART, 0, TAB_NONE, NULL },
     { "keepfolder", N_("File selector remembers folder"), NULL, &keep_folder, 
@@ -217,12 +215,10 @@ RCVAR rc_vars[] = {
     { "Rlib", N_("Path to R library"), NULL, paths.rlibpath, 
       MACHSET | BROWSER, MAXSTR, TAB_PROGS, NULL},
 #endif
-#ifdef USE_OX
     { "ox", N_("Path to oxl executable"), NULL, paths.oxlpath, 
       MACHSET | BROWSER, MAXSTR, TAB_PROGS, NULL},
     { "octave", N_("Path to octave executable"), NULL, paths.octpath, 
       MACHSET | BROWSER, MAXSTR, TAB_PROGS, NULL},
-#endif
     { "ratsbase", N_("RATS data directory"), NULL, paths.ratsbase, 
       USERSET | BROWSER, MAXLEN, TAB_DBS, NULL },
     { "dbhost", N_("Database server name"), NULL, paths.dbhost, 
@@ -1169,12 +1165,10 @@ static void make_prefs_tab (GtkWidget *notebook, int tab)
 	    continue;
 	}
 
-#ifdef USE_OX
 	if (!ox_support && rc->var == paths.oxlpath) {
 	    /* don't show ox path entry if support is not enabled */
 	    continue;
 	}
-#endif
 
 	if ((rc->flags & BOOLSET) && rc->link == NULL) { 
 	    /* simple boolean variable (check box) */
