@@ -1,17 +1,24 @@
 version 1.8.8, in progress
 - Enable full-text search of "online" help files
+- Enable help for specific "settable" variables, as in
+  "help set lbfgs"
 - "mread": search the gretl working directory if the
   file is not found at first
 - ODBC import: enable extraction of multiple data series
   per SQL query
 - Export of data to R, interactively: add a message
   confirming that the export worked
+- "foreign" code blocks: add support for GNU Octave
 - Fix bug: errors in Exponential Moving Average in GUI
 - Fix bug: non-ASCII characters not handled in function
   package upload to server
 - Fix bug: double normal cdf did not handle correctly some 
   corner cases
 - Fix bug 2944000
+- Fix font-encoding issues on MS Windows: session-names
+  with non-ASCII characters were not appearing in the gretl
+  title bar; and the encoding was getting broken between
+  copy and paste, e.g. in script windows
 
 01/24/2010 version 1.8.7
 - GUI enhancement: add apparatus to help keep track of
